2013-01-08  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_type_name):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlstate.c: (gst_ttml_state_set_attribute),
	(gst_ttml_state_get_attribute):
	* src/gstttmlstyle.c: (gst_ttml_style_get_text_decoration_name),
	(gst_ttml_style_gen_pango):
	* src/gstttmlstyle.h:
	  - Support for the textDecoration styling attribute.

2013-01-08  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_type_name):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlstate.c: (gst_ttml_state_set_attribute),
	(gst_ttml_state_get_attribute):
	* src/gstttmlstyle.c: (gst_ttml_style_get_font_weight_name),
	(gst_ttml_style_gen_pango):
	* src/gstttmlstyle.h:
	  - Support for the fontWeight styling attribute.

2013-01-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_gen_buffer),
	(gst_ttmlparse_sax_characters):
	* src/gstttmlutils.c:
	* src/gstttmlutils.h:
	  - Better handling of blank nodes: they cannot be ignored.
	    Instead, we accept them and then trim heading and trailing
	    whitespace in the final buffers (fixes Span004.xml)

2013-01-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_sax_element_start),
	(gst_ttmlparse_sax_characters):
	* src/gstttmlutils.c: (gst_ttml_utils_node_type_name):
	* src/gstttmlutils.h:
	  - Better debug messages involving node type names.

2013-01-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlspan.c: (gst_ttml_span_new):
	  - Proper removal of CR characters (instead of replacing by SPACE)

2012-12-28  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.c:
	  - Fix linux build by removing unused function.

2012-12-28  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_free), (gst_ttml_attribute_copy),